sonarqube/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: sonarqube

  labels:
    name: sonarqube
    project: multicloud-devsecops-platform
