sonarqube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: sonarqube-ingress
  namespace: sonarqube

  annotations:

    kubernetes.io/ingress.class: alb

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

spec:

  ingressClassName: alb

  rules:

    - http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: sonarqube-sonarqube

                port:

                  number: 9000
